src/styles/home.css
.homeContainer{
    margin-top: 7em;
    position: relative;
    background-color: var(--blue);
}
.homeContainer .head{
    width:100%;
    position: absolute;
    top:20em;
}
.homeContainer img{
    width:100%;
    top:0;
    left:0;
    z-index: -1;
}
.homeContainer .head .headTitle{
    width: 100%;
    color: white;
    text-shadow: 
    -3px -3px 5px var(--blue), 
    3px 3px 5px var(--blue), 
    3px -3px 5px var(--blue), 
    -3px 3px 5px var(--blue);
    font-family: 'Oleo Script Swash Caps', cursive;
    font-weight: 700;
    font-size: 5em;
    text-align: center;  
    position: absolute;
    z-index: 10;  
    top: 0%;
    left:50%;
    transform: translate(-50%, -50%);
}
.homeContainer .head .titleButton{
    padding: .5em 1.2em;
    font-size: 1.6em;
    cursor: pointer;
    border-radius: 5px;
    user-select: none;
    position: absolute;
    z-index: 10;
    transform: translate(-50%, -50%);
    text-decoration: none;
    color: white;
    margin-top: 3em;
    background-color: var(--black);
    border: 2px solid var(--white);
}
.homeContainer .head .titleButton:hover{
    border: 2px solid var(--blue);
    color: var(--blue);
    box-shadow: -3px -3px 5px var(--blue), 
    3px 3px 5px var(--blue), 
    3px -3px 5px var(--blue), 
    -3px 3px 5px var(--blue);
}
/* @media(max-width: 1200px){
    
} */
@media(max-width: 800px){
    .homeContainer .head{
        top:10em;
    }
    .homeContainer img{

    }
    .homeContainer .head .headTitle{
        font-size: 4em;
    }
    .homeContainer .head .titleButton{
        padding: .5em 1em;
        font-size: 1.2em;
    }
}
@media(max-width: 560px){
    .homeContainer .head .headTitle{
        font-size: 2.5em;
    }
    .homeContainer .head .titleButton{
        padding: .4em .8em;
        font-size: 1em;
    }
}

/*--------------- ABOUT ---------------*/
.homeContainer .text{
    padding: 3em;
    background-color: var(--black);
    font-family: 'Righteous', cursive;
    line-height: 40px;
    border-bottom: 3px solid var(--blue);
}
.homeContainer .text .title{
    font-size: 3em;
    padding: 1em;
    color: var(--darkblue);
}
.homeContainer .text .content{
    font-size: 1.6em;
    color: var(--darkblue);
    padding: .5em 1em;
}

@media(max-width: 1200px){

}
@media(max-width: 800px){
    .homeContainer .text{
        line-height: 30px;
        padding: 2em;
    }
    .homeContainer .text .title{
        font-size: 2em;
    }
    .homeContainer .text .content{
        font-size: 1.2em;
    }
}
@media(max-width: 560px){
    .homeContainer .about{
        padding: 1em;
    }
}
@media(max-width: 540px){

}

